fixed spacing between lines in work blocks and project blocks

--- a/src/components/ResumeSection/Projects/projects.css
+++ b/src/components/ResumeSection/Projects/projects.css
@@ -11,6 +11,7 @@
   font-weight: 400;
   font-size: 17px;
   color: #E2D9F8;
+  margin: 0;
 }
 
 .project-desc {
@@ -19,6 +20,7 @@
   font-size: 16px;
   color: #E2D9F8;
   line-height: 140%;
+  margin: 0;
 }
 
 .link > a {
