--- a/src/components/ResumeSection/Work/work.css
+++ b/src/components/ResumeSection/Work/work.css
@@ -14,6 +14,7 @@
   font-weight: 400;
   font-size: 17px;
   color: #E2D9F8;
+  margin: 0;
 }
 
 .work-desc {
@@ -22,6 +23,7 @@
   font-size: 16px;
   color: #E2D9F8;
   line-height: 140%;
+  margin: 0;
 }
 
 .job-title {
@@ -29,6 +31,8 @@
   font-weight: 300;
   font-size: 16px;
   color: #7B758A;
+  margin: 0;
+  line-height: 190%;
 }
 
 .work-date {
@@ -36,6 +40,7 @@
   font-weight: 400;
   font-size: 17px;
   color: #7B758A;
+  margin: 0;
 }
 
 @media (max-width: 500px){
